Resolved mobile nav not hiding. Fixed z-index with office tiles.

--- a/src/sass/_sections.scss
+++ b/src/sass/_sections.scss
@@ -559,7 +559,6 @@ h1 {
 		top: 0;
 		left: 0;
 		opacity: 0;
-		z-index: 9999;
 		transition: opacity 300ms;
 		
 		&.showDetails{
